Fixed chained cards on mobile.

--- a/src/assets/styles/page_styles/Explore.css
+++ b/src/assets/styles/page_styles/Explore.css
@@ -49,7 +49,7 @@
     background-color: rgba(0, 0, 0, 0.05);
     width: 50%;
     min-width: 20rem;
-    max-width: 100vh;
+    max-width: 100%;
     height: 30rem;
     min-height: 30rem;
     border-radius: 1.5rem;
@@ -110,7 +110,7 @@
     height: 4rem;
     min-height: 4rem;
     max-height: 4rem;
-    background-color: rgb(181, 128, 255);
+    background-color: rgb(152, 185, 255);
     border-radius: 10rem;
     z-index: 101;
 }
